--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,18 +1,19 @@
 object Form1: TForm1
-  Left = 760
+  Left = 578
   Height = 127
-  Top = 414
+  Top = 209
   Width = 340
   Caption = 'Duplicate images'
   ClientHeight = 127
   ClientWidth = 340
   OnClose = FormClose
   OnCreate = FormCreate
-  LCLVersion = '2.2.0.4'
+  Position = poScreenCenter
+  LCLVersion = '2.2.6.0'
   object selectButton: TButton
     Left = 16
     Height = 65
-    Top = 16
+    Top = 32
     Width = 131
     Caption = 'Select Folder'
     OnClick = selectButtonClick
@@ -21,7 +22,7 @@ object Form1: TForm1
   object convertButton: TButton
     Left = 185
     Height = 65
-    Top = 16
+    Top = 32
     Width = 136
     Caption = 'Convert'
     OnClick = convertButtonClick
@@ -29,11 +30,21 @@ object Form1: TForm1
   end
   object statusLabel: TLabel
     Left = 0
-    Height = 17
-    Top = 110
+    Height = 15
+    Top = 112
     Width = 340
     Align = alBottom
     Caption = 'Status messages'
+    ParentColor = False
+  end
+  object quitButton: TButton
+    Left = 264
+    Height = 25
+    Top = 0
+    Width = 75
+    Caption = 'Exit'
+    OnClick = quitButtonClick
+    TabOrder = 2
   end
   object SelectDirectoryDialog1: TSelectDirectoryDialog
     Left = 165
