--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,10 +1,10 @@
 object Form1: TForm1
   Left = 578
-  Height = 127
+  Height = 234
   Top = 209
   Width = 340
   Caption = 'Duplicate images'
-  ClientHeight = 127
+  ClientHeight = 234
   ClientWidth = 340
   OnClose = FormClose
   OnCreate = FormCreate
@@ -31,7 +31,7 @@ object Form1: TForm1
   object statusLabel: TLabel
     Left = 0
     Height = 15
-    Top = 112
+    Top = 219
     Width = 340
     Align = alBottom
     Caption = 'Status messages'
@@ -45,6 +45,20 @@ object Form1: TForm1
     Caption = 'Exit'
     OnClick = quitButtonClick
     TabOrder = 2
+  end
+  object Memo1: TMemo
+    Left = 8
+    Height = 98
+    Top = 112
+    Width = 320
+    Color = clBlack
+    Font.Color = clSilver
+    Font.Height = -11
+    Lines.Strings = (
+      'Memo1'
+    )
+    ParentFont = False
+    TabOrder = 3
   end
   object SelectDirectoryDialog1: TSelectDirectoryDialog
     Left = 165
